[package]
name = "aqua-test-module"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "aqua_test_module"
path = "src/main.rs"

[dependencies]
fluence = { git = "https://github.com/fluencelabs/rust-sdk", branch = "optimizations", features = ["logger"] }
