[package]
name = "aqua-test-utils"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "aqua_test_utils"
path = "src/lib.rs"

[dependencies]
fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"] }
aquamarine-vm = { git = "https://github.com/fluencelabs/fce", branch = "sdk_optimizations", features = ["raw-aquamarine-vm-api"] }
serde_json = "1.0.56"
