[package]
name = "air-test-utils"
version = "0.2.1"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
publish = false

[lib]
name = "air_test_utils"
path = "src/lib.rs"

[dependencies]
marine-rs-sdk = "0.6.11"
avm-server = { path = "../../avm/server" }
air = { path = "../../air" }
air-interpreter-interface = { path = "../../crates/interpreter-interface" }

serde_json = "1.0.61"
