[package]
name = "air-testing-framework"
version = "0.1.1"
description = "AquaVM testing framework"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/test-framework"
publish = false
keywords = ["fluence", "air", "test"]

[lib]
name = "air_test_framework"
path = "src/lib.rs"

[dependencies]
air-test-utils = { version = "0.1.0", path = "../air-lib/test-utils" }
air-parser = { version = "0.7.2", path = "../air-lib/air-parser" }

itertools = "0.10.5"
strum = { version="0.24.1", features=["derive"] }
nom = "7.1.3"
nom_locate = "4.1.0"
serde_json = "1.0.92"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3.0"

# We do not want to depend on wasm binary path
air-test-utils = { version = "0.1.0", path = "../air-lib/test-utils", features = ["test_with_native_code"] }
