[package]
name = "air-testing-framework"
version = "0.2.1"
description = "AquaVM testing framework"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/test-framework"
documentation = "https://docs.rs/air-testing-framework"
keywords = ["fluence", "air", "test"]

[lib]
name = "air_test_framework"
path = "src/lib.rs"

[dependencies]
air-test-utils = { version = "0.6.0", path = "../air-lib/test-utils" }
aquavm-air-parser = { version = "0.7.5", path = "../air-lib/air-parser" }

itertools = "0.10.5"
strum = { version="0.24.1", features=["derive"] }
nom = "7.1.3"
nom_locate = "4.1.0"
serde_json = "1.0.95"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3.0"
