[package]
name = "air-testing-framework"
version = "0.11.3"
description = "AquaVM testing framework"
authors = ["Fluence DAO", "Cloudless Labs"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/test-framework"
documentation = "https://docs.rs/air-testing-framework"
keywords = ["fluence", "air", "test"]

[lib]
name = "air_test_framework"
path = "src/lib.rs"

[dependencies]
air-test-utils = { version = "0.18.3", path = "../air-lib/test-utils" }
aquavm-air-parser = { version = "0.12.0", path = "../air-lib/air-parser" }

itertools = "0.13.0"
fluence-keypair = "0.10.4"
strum = { version="0.24.1", features=["derive"] }
nom = "7.1.3"
nom_locate = "4.1.0"
serde_json = "1.0.108"
regex = "1.10.2"
air-interpreter-signatures = { version = "0.1.7", path = "../air-lib/interpreter-signatures" }
tokio = {version = "1.35.1", features = ["rt", "macros"]}
futures = "0.3.30"
async-recursion = "1.0.5"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3.0"
