[package]
name = "bench_rkyv_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air-interpreter-data = { version = "0.11.0", path = "../../crates/air-lib/interpreter-data", features = ["rkyv"] }
bencher = "0.1.5"
ciborium = "0.2.1"
rkyv = { version = "0.7.42", features = ["archive_be", "size_32", "validation", "std"], default-features = false }

serde_json = { version = "1.0.107", features = ["raw_value"] }
simd-json = { version = "0.10.7", features = ["allow-non-simd" ] }
