[package]
name = "cidify"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
air-interpreter-cid = { version = "0.2.0", path = "../../crates/air-lib/interpreter-cid" }
air-interpreter-data = { version = "0.10.0", path = "../../crates/air-lib/interpreter-data" }
aquavm-air = { path = "../../air" }
air-test-utils = { path = "../../crates/air-lib/test-utils" }
clap = { version = "4.1.13", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
