[package]
name = "gen-bench-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air = { path = "../../air" }
air-test-utils = { path = "../../crates/air-lib/test-utils", default-features = false, features = ["test_with_native_code"] }
air-testing-framework = { path = "../../crates/testing-framework", default-features = false }
clap = { version = "4.3.5", features = ["derive"] }
itertools = "0.10.5"
maplit = "1.0.2"
serde_json = "1.0.97"
serde = "1.0.165"
