[package]
name = "gen-bench-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquavm-air = { path = "../../air", features = ["gen_signatures", "check_signatures"] }
air-interpreter-cid = { path = "../../crates/air-lib/interpreter-cid" }
air-interpreter-data = { path = "../../crates/air-lib/interpreter-data" }
air-interpreter-signatures = { path = "../../crates/air-lib/interpreter-signatures" }
air-test-utils = { path = "../../crates/air-lib/test-utils" }
air-testing-framework = { path = "../../crates/testing-framework" }
bs58 = "0.5.0"
clap = { version = "4.3.5", features = ["derive"] }
fluence-keypair = "0.10.1"
itertools = "0.10.5"
maplit = "1.0.2"
serde_json = "1.0.97"
serde = "1.0.165"
