[package]
name = "air-parser"
description = "Parser of the AIR scripts in a form of string to AST"
version = "0.7.2"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
publish = false
keywords = ["fluence", "air", "parser", "lalrpop"]
categories = ["wasm"]

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
air-lambda-ast = { path = "../lambda/ast" }
air-lambda-parser = { path = "../lambda/parser" }

lalrpop-util = "0.19.8"
regex = "1.7.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
multimap = "0.8.3"

# TODO: hide serde behind a feature
serde = { version = "1.0.147", features = ["rc", "derive"] }
serde_json = "1.0.89"

itertools = "0.10.5"
thiserror = "1.0.37"
tracing = "0.1.37"

[dev-dependencies]
fstrings = "0.2.3"
criterion = "0.4.0"
non-empty-vec = { version = "0.2.3" }

[[bench]]
name = "parser"
harness = false
