[package]
name = "aquavm-air-parser"
description = "Parser of the AIR scripts in a form of string to AST"
version = "0.7.5"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/air-parser"
repository = "https://github.com/fluencelabs/aquavm"
keywords = ["fluence", "air", "parser", "lalrpop"]
categories = ["wasm"]

[lib]
name = "air_parser"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
air-lambda-ast = { version = "0.1.0", path = "../lambda/ast" }
air-lambda-parser = { version = "0.1.0", path = "../lambda/parser" }

lalrpop-util = "0.20.0"
regex = "1.8.1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
multimap = "0.9.0"

# TODO: hide serde behind a feature
serde = { version = "1.0.164", features = ["rc", "derive"] }
serde_json = "1.0.95"

itertools = "0.10.5"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.4.0"
non-empty-vec = { version = "0.2.3" }

[[bench]]
name = "parser"
harness = false
