[package]
name = "air-execution-info-collector"
version = "0.1.0"
description = "Implementation of AIR execution info collector"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
publish = false
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "air_execution_info_collector"
path = "src/lib.rs"

[dependencies]
air-parser = { path = "../air-parser" }
