[package]
name = "air-execution-info-collector"
version = "0.7.5"
description = "Implementation of AIR execution info collector"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/aquavm"
documentation = "https://docs.rs/air-execution-info-collector"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "air_execution_info_collector"
path = "src/lib.rs"

[dependencies]
aquavm-air-parser = { version = "0.7.5", path = "../air-parser" }
