[package]
name = "air-execution-info-collector"
version = "0.7.14"
description = "Implementation of AIR execution info collector"
authors = ["Fluence DAO", "Cloudless Labs"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/fluencelabs/aquavm"
documentation = "https://docs.rs/air-execution-info-collector"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "air_execution_info_collector"
path = "src/lib.rs"

[dependencies]
aquavm-air-parser = { version = "0.12.0", path = "../air-parser" }
