[package]
name = "air-interpreter-cid"
description = "AIR interpreter CID util module"
version = "0.5.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/air-interpreter-cid"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/air-lib/interpreter-cid"
keywords = ["fluence", "air", "programming-language", "cid", "ipld"]
categories = ["wasm"]

[dependencies]
blake3 = "1.5.0"
cid = { version = "0.10.1", default-features = false, features = ["std"] }
multihash = { version = "0.18.1", default-features = false, features = ["multihash-impl", "std", "blake3"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.95"
sha2 = "0.10.7"
