[package]
name = "air-interpreter-cid"
description = "AIR interpreter CID util module"
version = "0.8.0"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/air-interpreter-cid"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/air-lib/interpreter-cid"
keywords = ["fluence", "air", "programming-language", "cid", "ipld"]
categories = ["wasm"]

[dependencies]
cid = { version = "0.11.0", default-features = false, features = ["std"] }
multihash = { version = "0.19.1" }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.95"
thiserror = "1.0.49"

# beware: `digest` version should match one of the used in particular hash crates
digest = "0.10.7"
sha2 = "0.10.7"
blake3 = { version = "1.5.0", features = ["traits-preview"] }
multihash-codetable = { version = "0.1.1", features = ["blake3", "sha2", "digest"] }

[dev-dependencies]
multihash-codetable = { version = "0.1.1", features = ["ripemd"] }
